Use Java natively to give user control about JVM options and use Docker internal init to prevent the PID 1 problem.